--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ETHIO BINGO GOLD - AUTO DRAW EDITION</title>
+    <title>ETHIO BINGO GOLD - FAST EDITION</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
@@ -12,7 +12,7 @@
         :root { --gold: #facc15; --bg: #020617; --card: #1e293b; --green: #10b981; --red: #f43f5e; --blue: #3b82f6; }
         body { background: var(--bg); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; user-select: none; }
         
-        #splash { position: fixed; top:0; left:0; width:100%; height:100%; background:var(--bg); display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:10000; animation: fadeOut 1s forwards 2s; }
+        #splash { position: fixed; top:0; left:0; width:100%; height:100%; background:var(--bg); display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:10000; animation: fadeOut 1s forwards 1.5s; }
         #splash h1 { color:var(--gold); font-size:3rem; text-shadow:0 0 20px var(--gold); }
         @keyframes fadeOut { to { opacity:0; visibility:hidden; } }
 
@@ -21,7 +21,7 @@
         .page.active { display: block; }
         @keyframes slideIn { from { transform: translateY(20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
 
-        .ball { width: 85px; height: 85px; background: radial-gradient(circle at 30% 30%, #fff, var(--gold), #854d0e); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2.5rem; font-weight: 900; color: #000; margin: 15px auto; border: 4px solid #fff; box-shadow: 0 5px 20px rgba(0,0,0,0.5); }
+        .ball { width: 90px; height: 90px; background: radial-gradient(circle at 30% 30%, #fff, var(--gold), #854d0e); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2.8rem; font-weight: 900; color: #000; margin: 15px auto; border: 4px solid #fff; box-shadow: 0 5px 20px rgba(0,0,0,0.5); }
         .bingo-grid { display: grid; grid-template-columns: repeat(5, 1fr); gap: 6px; background: #475569; padding: 10px; border-radius: 15px; max-width: 330px; margin: auto; }
         .cell { aspect-ratio: 1; background: #fff; color: #000; display: flex; align-items: center; justify-content: center; font-weight: 800; border-radius: 8px; font-size: 1.2rem; }
         .cell.marked { background: var(--red) !important; color: white !important; transform: scale(0.9); }
@@ -30,18 +30,17 @@
 
         .btn { width: 100%; padding: 16px; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; margin-top: 10px; }
         .btn-gold { background: linear-gradient(135deg, #fde047, #ca8a04); color: #422006; }
-        .admin-req { background: #111827; padding: 12px; border-radius: 10px; border-left: 4px solid var(--gold); margin-bottom: 10px; font-size: 0.8rem; }
-        input { width: 100%; padding: 12px; border-radius: 8px; border: none; box-sizing: border-box; margin-top: 8px; background: #f8fafc; color: #000; }
-        .card-picker-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; max-height: 300px; overflow-y: auto; padding: 10px; }
+        .card-picker-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; max-height: 300px; overflow-y: auto; }
         .card-num { background: var(--card); padding: 10px; border-radius: 8px; text-align: center; border: 1px solid var(--gold); }
+        input { width: 100%; padding: 12px; border-radius: 8px; border: none; box-sizing: border-box; margin-top: 8px; }
     </style>
 </head>
 <body>
 
-    <div id="splash"><h1>ኢትዮ ቢንጎ</h1><p>AUTO CALLER READY</p></div>
+    <div id="splash"><h1>ኢትዮ ቢንጎ</h1><p>FAST DRAW: 3s</p></div>
 
     <div class="header">
-        <div><b id="u-name">...</b><br><small style="color:var(--green)">🟢 Online</small></div>
+        <div><b id="u-name">...</b><br><small style="color:var(--green)">🟢 Live</small></div>
         <div style="text-align:right;"><div id="u-bal" style="color:var(--green); font-size:1.1rem; font-weight:900;">0.00 ETB</div></div>
     </div>
 
@@ -51,6 +50,7 @@
             <button class="btn btn-gold" onclick="checkJoin(50)">50 ETB</button>
             <button class="btn btn-gold" onclick="checkJoin(100)">100 ETB</button>
             <button class="btn btn-gold" onclick="checkJoin(500)">500 ETB</button>
+            <button class="btn btn-gold" onclick="checkJoin(1000)" style="grid-column: span 2;">1000 ETB</button>
         </div>
 
         <div style="margin-top:20px; display:grid; grid-template-columns:1fr 1fr; gap:10px;">
@@ -59,13 +59,13 @@
         </div>
 
         <div id="dep-box" style="display:none; margin-top:10px; background:var(--card); padding:15px; border-radius:12px;">
-            <input type="text" id="tid" placeholder="ቴሌብር TID ያስገቡ">
-            <button class="btn btn-gold" onclick="requestDep()">ጥያቄ ላክ</button>
+            <input type="text" id="tid" placeholder="ቴሌብር TID">
+            <button class="btn btn-gold" onclick="requestDep()">ላክ</button>
         </div>
         <div id="wd-box" style="display:none; margin-top:10px; background:var(--card); padding:15px; border-radius:12px;">
-            <input type="number" id="wd-amt" placeholder="የብር መጠን">
-            <input type="text" id="wd-bank" placeholder="ባንክ እና ስልክ">
-            <button class="btn" style="background:var(--red); color:white;" onclick="requestWd()">የወጪ ጥያቄ ላክ</button>
+            <input type="number" id="wd-amt" placeholder="መጠን">
+            <input type="text" id="wd-bank" placeholder="ባንክ/ስልክ">
+            <button class="btn" style="background:var(--red); color:white;" onclick="requestWd()">ላክ</button>
         </div>
 
         <button id="admin-btn" class="btn" style="display:none; background:var(--blue); color:white; margin-top:30px;" onclick="showPage('admin-page')">⚙️ ዳኛ ገጽ</button>
@@ -86,10 +86,10 @@
     <div id="admin-page" class="page">
         <div class="ball" id="admin-ball">?</div>
         <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
-            <button class="btn btn-gold" onclick="draw()">ቁጥር አውጣ</button>
-            <button id="auto-btn" class="btn" style="background:var(--green); color:white;" onclick="toggleAuto()">Auto ጀምር</button>
+            <button class="btn btn-gold" onclick="draw()">አውጣ</button>
+            <button id="auto-btn" class="btn" style="background:var(--green); color:white;" onclick="toggleAuto()">Auto (3s)</button>
         </div>
-        <button class="btn" style="background:var(--red); color:white;" onclick="resetGame()">RESET GAME</button>
+        <button class="btn" style="background:var(--red); color:white;" onclick="resetGame()">RESET</button>
         <div id="req-list" style="margin-top:20px;"></div>
         <button class="btn" onclick="showPage('home-page')">ተመለስ</button>
     </div>
@@ -102,7 +102,7 @@
         const tg = window.Telegram.WebApp;
 
         const uid = tg.initDataUnsafe.user ? tg.initDataUnsafe.user.id : "T_USER_"+Date.now();
-        const uName = tg.initDataUnsafe.user ? tg.initDataUnsafe.user.first_name : "Player";
+        const uName = tg.initDataUnsafe.user ? tg.initDataUnsafe.user.first_name : "ተጫዋች";
         document.getElementById('u-name').innerText = uName;
         if(uid == ADMIN_ID) document.getElementById('admin-btn').style.display = 'block';
 
@@ -143,20 +143,10 @@
             }
         }
 
-        function requestDep() {
-            db.ref('reqs').push({ uid, name: uName, val: document.getElementById('tid').value, type: 'DEP', status: 'pending' });
-            alert("ተልኳል!"); toggleView('dep-box');
-        }
-
-        function requestWd() {
-            let val = document.getElementById('wd-amt').value + " ETB to " + document.getElementById('wd-bank').value;
-            db.ref('reqs').push({ uid, name: uName, val, type: 'WD', status: 'pending' });
-            alert("ተልኳል!"); toggleView('wd-box');
-        }
-
+        function requestDep() { db.ref('reqs').push({ uid, name: uName, val: document.getElementById('tid').value, type: 'DEP', status: 'pending' }); alert("ተልኳል!"); }
+        function requestWd() { db.ref('reqs').push({ uid, name: uName, val: document.getElementById('wd-amt').value + " ETB - " + document.getElementById('wd-bank').value, type: 'WD', status: 'pending' }); alert("ተልኳል!"); }
         function bingo() { db.ref('reqs').push({ uid, name: uName, type: 'BINGO', status: 'pending' }); alert("ቢንጎ ተልኳል!"); }
 
-        // ADMIN FUNCTIONS
         function draw() {
             if(drawn.length >= 75) return;
             let n; do { n = Math.floor(Math.random()*75)+1; } while(drawn.includes(n));
@@ -169,20 +159,20 @@
                 clearInterval(autoInterval); autoInterval = null;
                 btn.innerText = "Auto ጀምር"; btn.style.background = "var(--green)";
             } else {
-                autoInterval = setInterval(draw, 5000); // በየ 5 ሰከንዱ
+                autoInterval = setInterval(draw, 3000); // *** እዚህ ጋር ነው በየ 3 ሰከንድ ያደረግኩት ***
                 btn.innerText = "አቁም"; btn.style.background = "var(--red)";
             }
         }
 
-        function resetGame() { if(confirm("ሁሉንም ዳታ ላጥፋ?")) { db.ref('game/drawn').set([]); if(autoInterval) toggleAuto(); } }
+        function resetGame() { if(confirm("ሁሉንም አጥፋ?")) { db.ref('game/drawn').set([]); if(autoInterval) toggleAuto(); } }
 
         if(uid == ADMIN_ID) {
             db.ref('reqs').on('value', s => {
                 const l = document.getElementById('req-list'); l.innerHTML = "<h4>ጥያቄዎች</h4>";
                 s.forEach(c => {
                     let r = c.val(); if(r.status == 'pending') {
-                        let d = document.createElement('div'); d.className = 'admin-req';
-                        d.innerHTML = `<b>${r.type}</b>: ${r.name}<br>${r.val||''} <button onclick="app('${c.key}','${r.uid}')">Approve</button>`;
+                        let d = document.createElement('div'); d.className = 'price-card'; d.style.padding="10px"; d.style.marginBottom="5px";
+                        d.innerHTML = `<b>${r.type}</b>: ${r.name}<br>${r.val||''} <button onclick="app('${c.key}','${r.uid}')" style="background:var(--green); border:none; color:white; padding:5px; border-radius:5px;">Approve</button>`;
                         l.appendChild(d);
                     }
                 });
