--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ETHIO BINGO - PREMIUM GOLD V2</title>
+    <title>ETHIO BINGO - PREMIUM GOLD V3</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
@@ -18,7 +18,9 @@
         .page { display: none; height: calc(100vh - 60px); padding: 20px; box-sizing: border-box; overflow-y: auto; }
         .page.active { display: flex; flex-direction: column; }
 
-        /* Full Screen Bingo */
+        /* Exit Button Design */
+        .exit-btn { position: absolute; top: 75px; right: 20px; background: rgba(239, 68, 68, 0.2); color: #ef4444; border: 1px solid #ef4444; width: 35px; height: 35px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; cursor: pointer; z-index: 100; }
+
         .bingo-grid { display: grid; grid-template-columns: repeat(5, 1fr); gap: 6px; width: 100%; max-width: 400px; background: rgba(255,255,255,0.03); padding: 10px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.1); margin: auto; }
         .cell { aspect-ratio: 1; background: #fff; color: #1e293b; display: flex; align-items: center; justify-content: center; font-size: 1.4rem; font-weight: 900; border-radius: 10px; transition: 0.2s; cursor: pointer; border-bottom: 4px solid #cbd5e1; }
         .cell.marked { background: #ef4444 !important; color: white !important; border-bottom: 0; transform: scale(0.9); box-shadow: 0 0 15px #ef4444; }
@@ -78,6 +80,7 @@
     </div>
 
     <div id="game-page" class="page">
+        <div class="exit-btn" onclick="confirmExit()">X</div>
         <div class="ball" id="live-ball">?</div>
         <div class="bingo-grid" id="main-board"></div>
         <button class="btn-premium" style="height:70px; font-size:1.6rem;" onclick="sendReq('BINGO')">BINGO!</button>
@@ -118,6 +121,12 @@
 
         function showPage(p) { document.querySelectorAll('.page').forEach(pg => pg.classList.remove('active')); document.getElementById(p).classList.add('active'); }
         function toggleView(id) { let e = document.getElementById(id); e.style.display = e.style.display==='none'?'block':'none'; }
+
+        function confirmExit() {
+            if(confirm("እርግጠኛ ነህ መውጣት ትፈልጋለህ? የከፈልከው ብር አይመለስም!")) {
+                showPage('home-page');
+            }
+        }
 
         function checkJoin(p) {
             if(myBal < p) return alert("ባላንስ የለም!");
